added background on the team page, changed note-view and made contact us page responsive

--- a/notes/templates/notes/view_note.html
+++ b/notes/templates/notes/view_note.html
@@ -15,8 +15,8 @@
           </div>
   
           <!-- Titles centered -->
-          <h3 class="text-center">Note Details</h3>
-          <h2 class="text-center">{{ note.title }}</h2>
+          <h3 class="text-center fs-5">Note Details</h3>
+          <h2 class="text-center fs-4">{{ note.title }}</h2>
   
           <!-- Interaction loop -->
           {% for interaction in interactions %}
