--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -15,9 +15,10 @@
                     <p>Drop us a line we really do read every message and will get back to you as soon as we can!</p>
                 </div>
                 <!-- Form to be used for contacting -->
-                <div class="d-flex justify-content-center mt-4">
-                    <form id="contactForm" class="contact-form w-50" method="post" action="{% url 'contact' %}">
-                        {% csrf_token %}
+                <div class="row justify-content-center mt-4">
+                  <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
+                    <form id="contactForm" class="contact-form" method="post" action="{% url 'contact' %}">
+                      {% csrf_token %}
                       {{ contact_form.non_field_errors }}
                       <p id="contact-name">
                         {{ contact_form.name.label_tag }}
@@ -41,7 +42,7 @@
                       </div>
                     </form>
                   </div>
-            </div>
+                </div>
         </div>
     </div>
 </div>
