update contact html

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -36,7 +36,7 @@
                         {{ contact_form.message }}
                       </p>
                       <div class="d-flex justify-content-center">
-                        <button id="contact-submit" class="btn btn-custom rounded-2" type="submit" aria-label="Submit">
+                        <button id="contact-submit" class="btn btn-custom rounded-2" type="submit" aria-label="Send a Message">
                           Submit
                         </button>
                       </div>
