--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                         <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'assistant' %}">Assistant</a>
+                        <a class="nav-link" href="{% url 'assistant' %}">UncleTech</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'notes' %}">Notes</a>
