Cleaned up the buttons and changed them in all locations.

--- a/static/css/account.css
+++ b/static/css/account.css
@@ -1,15 +1,3 @@
-/* Login button */
-.btn-custom {
-    background-color: var(--btn-light-color);
-    color: var(--font-color);
-    width: 50%;
-}
-
-.btn-custom-dark {
-    background-color: var(--btn-dark-color);
-    color: var(--footer-text);
-}
-
 /* Signup link */
 #signup-link a {
     padding: 0.5rem;
@@ -31,15 +19,23 @@
 }
 
 /* Hover & focus effect */
-.btn-custom:hover,
 #id_password_helptext a:hover,
 #signup-link a:hover, #signup-link a:focus {
     background-color: var(--btn-hover);
 }
 
-.btn-custom-dark:hover, .btn-custom-dark:focus {
+/* Signup button */
+#login-link a {
+    padding: 0.5rem;
     background-color: var(--btn-light-color);
     color: var(--font-color);
+    border-radius: 0.5rem;
+    text-decoration: none;
+}
+
+/* Hover & focus effect */
+#login-link a:hover, #signup-link a:focus {
+    background-color: var(--btn-hover);
 }
 
 /* Media queries */
