--- a/assistant/templates/assistant/assistant.html
+++ b/assistant/templates/assistant/assistant.html
@@ -45,7 +45,7 @@
                         <div
                             class="d-flex justify-content-center justify-content-md-start flex-wrap flex-md-nowrap gap-2">
                             <div class="col-4 col-md-auto p-0">
-                                <button id="send_button" class="btn w-100 send-button">
+                                <button id="send_button" class="btn btn-dark w-100">
                                     <i class="fa fa-paper-plane"></i>
                                 </button>
                             </div>
@@ -78,7 +78,7 @@
                                     <div class="modal-footer border-0">
                                         <button type="button" class="btn btn-secondary" id="cancelButton"
                                             data-bs-dismiss="modal">Cancel</button>
-                                        <button type="button" class="btn btn-confirm" id="okButton">OK</button>
+                                        <button type="button" class="btn btn-light" id="okButton">OK</button>
                                     </div>
                                 </div>
                             </div>
