--- a/notes/templates/notes/notes.html
+++ b/notes/templates/notes/notes.html
@@ -6,8 +6,8 @@
         <div class="modal-content p-4 text-center">
             <p>Do you really want to delete the note?</p>
             <div class="mt-4">
-                <button id="modalYesBtn" class="btn btn-filter me-3">Yes</button>
-                <button id="modalNoBtn" class="btn btn-custom-dark">No</button>
+                <button id="modalYesBtn" class="btn btn-light me-3">Yes</button>
+                <button id="modalNoBtn" class="btn btn-dark">No</button>
             </div>
         </div>
     </div>
@@ -22,7 +22,7 @@
                 <form method="get" class="filter-form">
                     <input type="text" name="q" placeholder="Filter notes by title, question, or answer..." 
                         value="{{ query|default:'' }}" class="form-control filter-input d-inline-block">
-                    <button type="submit" class="btn btn-filter">Filter</button>
+                    <button type="submit" class="btn btn-light">Filter</button>
                 </form>
 
                 <div class="row justify-content-center mt-4 gap-4">
