--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -13,7 +13,7 @@
                 <p class="text-center">{% trans 'Are you sure you want to sign out?' %}</p>
             </div>
             <div class="col-md-12 col-sm-6 d-flex justify-content-center py-2">
-                <button type="button" class="btn btn-custom rounded-2" data-bs-toggle="modal" data-bs-target="#logout-modal">
+                <button type="button" class="btn btn-light w-50 rounded-2" data-bs-toggle="modal" data-bs-target="#logout-modal">
                     {% trans "Sign Out" %}
                 </button>
             </div>
@@ -33,13 +33,13 @@
           {% trans 'Are you sure you want to sign out?' %}
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-custom rounded-2" data-bs-dismiss="modal">{% trans "Close" %}</button>
+          <button type="button" class="btn btn-light rounded-2" data-bs-dismiss="modal">{% trans "Close" %}</button>
           <form method="post" action="{% url 'account_logout' %}">
             {% csrf_token %}
             {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
             {% endif %}
-            <button class="btn btn-custom-dark rounded-2 w-100" type="submit">{% trans "Sign Out" %}</button>
+            <button class="btn btn-dark rounded-2 w-100" type="submit">{% trans "Sign Out" %}</button>
         </form>
         </div>
       </div>
