--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -28,7 +28,7 @@
                     {% csrf_token %}
                     {{ form.as_p }}
                     {{ redirect_field }}
-                    <button class="btn btn-custom rounded-2" type="submit">{% trans 'Reset My Password' %}</button>
+                    <button class="btn btn-light rounded-2" type="submit">{% trans 'Reset My Password' %}</button>
                 </form>
             </div>
             <div class="col-md-12 col-sm-6 text-center">
