--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -25,7 +25,7 @@
                 <form class="signup" id="signup-form" method="POST" action="{% url 'account_signup' %}">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button class="btn btn-custom rounded-2" type="submit">{% trans "Sign Up" %}</button>
+                    <button class="btn btn-light w-50 rounded-2" type="submit">{% trans "Sign Up" %}</button>
                 </form>
             {% if PASSKEY_SIGNUP_ENABLED %}
                 {% element hr %}
