--- a/templates/base.html
+++ b/templates/base.html
@@ -30,8 +30,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" href="{% static 'css/team.css' %}">
-    <link rel="stylesheet" href="{% static 'css/account/login.css' %}">
-    <link rel="stylesheet" href="{% static 'css/account/signup.css' %}">
+    <link rel="stylesheet" href="{% static 'css/account.css' %}">
     <link rel="stylesheet" href="{% static 'css/note.css' %}">
     <link rel="stylesheet" href="{% static 'css/contact.css' %}">
 
