--- a/assistant/templates/assistant/assistant.html
+++ b/assistant/templates/assistant/assistant.html
@@ -45,17 +45,17 @@
                         <div
                             class="d-flex justify-content-center justify-content-md-start flex-wrap flex-md-nowrap gap-2">
                             <div class="col-4 col-md-auto p-0">
-                                <button id="send_button" class="btn btn-dark w-100">
+                                <button id="send_button" class="btn btn-dark w-100" aria-label="Continue conversation">
                                     <i class="fa fa-paper-plane"></i>
                                 </button>
                             </div>
                             <div class="col-4 col-md-auto p-0">
-                                <button id="save_conversation" class="btn w-100">
+                                <button id="save_conversation" class="btn w-100" aria-label="save the conversation">
                                     <i class="fas fa-save"></i>
                                 </button>
                             </div>
                             <div class="col-4 col-md-auto p-0">
-                                <button id="clear_chat" class="btn w-100">
+                                <button id="clear_chat" class="btn w-100" aria-label="Clear chat history">
                                     <i class="fas fa-redo"></i>
                                 </button>
                             </div>
@@ -68,7 +68,7 @@
                                     <div class="modal-header border-0 pb-0">
                                         <h5 class="modal-title fw-bold">Save Conversation</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close" id="closeModal"></button>
+                                            aria-label="Closes the dialog" id="closeModal"></button>
                                     </div>
                                     <div class="modal-body">
                                         <label for="title" class="form-label">Title:</label>
@@ -77,7 +77,7 @@
                                     </div>
                                     <div class="modal-footer border-0">
                                         <button type="button" class="btn btn-secondary" id="cancelButton"
-                                            data-bs-dismiss="modal">Cancel</button>
+                                            data-bs-dismiss="modal" aria-label="closes pop-up box">Cancel</button>
                                         <button type="button" class="btn btn-light" id="okButton">OK</button>
                                     </div>
                                 </div>
